test/valid/builtins/plus.js
var x = 2 + 3;
var s = 'a' + 'b';

