test/invalid/builtins/typeof.js
var x = typeof 3;
x = 2;

